--- a/welcomePage.html
+++ b/welcomePage.html
@@ -10,9 +10,40 @@
   <body>
     <header>
       <img src="./assets/epicode_logo.png" alt="logo epicode" />
-      <h1>Welcome to <span>your exam</span></h1>
+      <h1>Welcome to <br /><span>your exam</span></h1>
     </header>
-    <main></main>
+    <main>
+      <section id="istruzioni">
+        <div>
+          <h2>Instructions</h2>
+          <p>
+            We don't expect most engineers to know the answers to all of these
+            <br />
+            questions, don't worry if you're unsure of a few of them.
+          </p>
+        </div>
+        <div>
+          <ul>
+            <li>
+              Each question is <span>timed</span> and can only be
+              <span>answered once.</span>
+            </li>
+            <li>
+              Changing browser tab or opening other windows will
+              <span>invalidate the question</span>
+            </li>
+            <li>This exam will take approx. <span>0-5 minutes.</span></li>
+          </ul>
+        </div>
+      </section>
+      <section id="form">
+        <form>
+          <input type="checkbox" id="spunta" required />
+          <p>I promise to answer myself without help from anyone</p>
+          <input type="button" id="bottone" value="PROCEED" required />
+        </form>
+      </section>
+    </main>
     <footer></footer>
   </body>
 </html>
