aggiunta file html benchmark
aggiunta file html benchmark e conclusione struttura e css della pagina welcome

--- a/welcomePage.html
+++ b/welcomePage.html
@@ -40,10 +40,13 @@
         <form>
           <input type="checkbox" id="spunta" required />
           <p>I promise to answer myself without help from anyone</p>
-          <input type="button" id="bottone" value="PROCEED" required />
+          <a href="./benchmark.html"
+            ><input type="button" id="bottone" value="PROCEED" required
+          /></a>
         </form>
       </section>
     </main>
     <footer></footer>
   </body>
+  <script src="./style/welcome.js"></script>
 </html>
